--- a/test/timeline.html
+++ b/test/timeline.html
@@ -7,7 +7,7 @@
   <script>
     moment.lang('nl');
   </script>
-  <script src="../dist/vis.js"></script>
+  <script src="../vis-custom.js"></script>
   <link href="../dist/vis.css" rel="stylesheet" type="text/css" />
 
   <style type="text/css">
