--- a/test/timeline.html
+++ b/test/timeline.html
@@ -5,9 +5,9 @@
   <script src="../node_modules/moment/moment.js"></script>
   <script src="../node_modules/moment/locale/nl.js"></script>
   <script>
-    moment.lang('nl');
+    moment.locale('nl');
   </script>
-  <script src="../vis-custom.js"></script>
+  <script src="../dist/vis.js"></script>
   <link href="../dist/vis.css" rel="stylesheet" type="text/css" />
 
   <style type="text/css">
@@ -69,26 +69,26 @@
     fieldId: '_id'
   });
   items.add([
-    {_id: 0, content: 'item 0', start: now.clone().add('days', 3).toDate(), title: 'hello title!'},
-    {_id: '1', content: 'item 1<br>start', start: now.clone().add('days', 4).toDate()},
-    {_id: 2, content: 'item 2', start: now.clone().add('days', -2).toDate() },
-    {_id: 3, content: 'item 3', start: now.clone().add('days', 2).toDate()},
+    {_id: 0, content: 'item 0', start: now.clone().add(3, 'days').toDate(), title: 'hello title!'},
+    {_id: '1', content: 'item 1<br>start', start: now.clone().add(4, 'days').toDate()},
+    {_id: 2, content: 'item 2', start: now.clone().add(-2, 'days').toDate() },
+    {_id: 3, content: 'item 3', start: now.clone().add(2, 'days').toDate()},
     {
       _id: 4, content: 'item 4 ',
-      start: now.clone().add('days', 0).toDate(),
-      end: now.clone().add('days', 7).toDate(),
+      start: now.clone().add(0, 'days').toDate(),
+      end: now.clone().add(7, 'days').toDate(),
       title: 'hello title!'
     },
-    {_id: 5, content: 'item 5', start: now.clone().add('days', 9).toDate(), type:'point', title: 'hello title!'},
-    {_id: 6, content: 'item 6', start: now.clone().add('days', 11).toDate()}
+    {_id: 5, content: 'item 5', start: now.clone().add(9, 'days').toDate(), type:'point', title: 'hello title!'},
+    {_id: 6, content: 'item 6', start: now.clone().add(11, 'days').toDate()}
   ]);
 
   var container = document.getElementById('visualization');
   var options = {
     editable: true,
     //orientation: 'top',
-    start: now.clone().add('days', -7),
-    end: now.clone().add('days', 7),
+    start: now.clone().add(-7, 'days'),
+    end: now.clone().add(7, 'days'),
     //maxHeight: 200,
     //height: 200,
     showCurrentTime: true,
