updated docs and examples with new constructors.

--- a/examples/graph2d/03_groups.html
+++ b/examples/graph2d/03_groups.html
@@ -105,7 +105,7 @@
       start: '2014-06-10',
       end: '2014-07-04'
   };
-  var graph2d = new vis.Graph2d(container, dataset, options, groups);
+  var graph2d = new vis.Graph2d(container, dataset, groups, options);
 
 </script>
 </body>
