--- a/examples/graph2d/09_external_legend.html
+++ b/examples/graph2d/09_external_legend.html
@@ -287,7 +287,7 @@
         start: '2014-06-09',
         end: '2014-07-03'
     };
-    var graph2d = new vis.Graph2d(container, items, options, groups);
+    var graph2d = new vis.Graph2d(container, items, groups, options);
 
 
     /**
