--- a/examples/graph2d/12_customRange.html
+++ b/examples/graph2d/12_customRange.html
@@ -87,7 +87,7 @@ var options = {
         start: '2014-06-10',
         end: '2014-06-18'
     };
-    var graph2d = new vis.Graph2d(container, items, options,groups);
+    var graph2d = new vis.Graph2d(container, items, groups, options);
 
 </script>
 </body>
