--- a/examples/graph2d/14_toggleGroups.html
+++ b/examples/graph2d/14_toggleGroups.html
@@ -128,12 +128,12 @@
       showMajorLabels:false,
       showMinorLabels:false
   };
-  var graph2d1 = new vis.Graph2d(document.getElementById('visualization1'), dataset, options, groups);
-  var graph2d2 = new vis.Graph2d(document.getElementById('visualization2'), dataset, options, groups);
-  var graph2d3 = new vis.Graph2d(document.getElementById('visualization3'), dataset, options, groups);
-  var graph2d4 = new vis.Graph2d(document.getElementById('visualization4'), dataset, options, groups);
-  var graph2d5 = new vis.Graph2d(document.getElementById('visualization5'), dataset, options, groups);
-  var graph2d6 = new vis.Graph2d(document.getElementById('visualization6'), dataset, options, groups);
+  var graph2d1 = new vis.Graph2d(document.getElementById('visualization1'), dataset, groups, options);
+  var graph2d2 = new vis.Graph2d(document.getElementById('visualization2'), dataset, groups, options);
+  var graph2d3 = new vis.Graph2d(document.getElementById('visualization3'), dataset, groups, options);
+  var graph2d4 = new vis.Graph2d(document.getElementById('visualization4'), dataset, groups, options);
+  var graph2d5 = new vis.Graph2d(document.getElementById('visualization5'), dataset, groups, options);
+  var graph2d6 = new vis.Graph2d(document.getElementById('visualization6'), dataset, groups, options);
 
   graph2d1.setOptions({groups:{visibility:{0:true, 1:false, 2:false, 3:false, "__ungrouped__":false}}})
   graph2d2.setOptions({groups:{visibility:{0:false, 1:true, 2:false, 3:false, "__ungrouped__":false}}})
