--- a/examples/graph2d/05_bothAxis.html
+++ b/examples/graph2d/05_bothAxis.html
@@ -131,7 +131,7 @@
         start: '2014-06-09',
         end: '2014-07-03'
     };
-    var graph2d = new vis.Graph2d(container, items, options, groups);
+    var graph2d = new vis.Graph2d(container, items, groups, options);
 
 </script>
 </body>
