--- a/test/timeline.html
+++ b/test/timeline.html
@@ -69,11 +69,10 @@
     fieldId: '_id'
   });
   items.add([
-    {_id: 0, content: 'item 0', start: now.clone().add(3, 'days').toDate(), title: 'hello title!', style: 'color: red;'},
-    //{_id: 0, content: 'item 0', start: now.clone().add(3, 'days').toDate(), title: 'hello title!'},
+    {_id: 0, content: 'item 0', start: now.clone().add(3, 'days').toDate(), title: 'hello title!'},
     {_id: '1', content: 'item 1<br>start', start: now.clone().add(4, 'days').toDate()},
     {_id: 2, content: 'item 2', start: now.clone().add(-2, 'days').toDate() },
-    {_id: 3, content: 'item 3', start: now.clone().add(2, 'days').toDate()},
+    {_id: 3, content: 'item 3', start: now.clone().add(2, 'days').toDate(), style: 'color: red;'},
     {
       _id: 4, content: 'item 4 ',
       start: now.clone().add(0, 'days').toDate(),
