Fixed moving legend when postioned on the bottom and vertical dragging

--- a/examples/graph2d/07_scrollingAndSorting.html
+++ b/examples/graph2d/07_scrollingAndSorting.html
@@ -59,7 +59,7 @@
 
   var dataset = new vis.DataSet(items);
   var options = {
-      legend: {left: {position: 'bottom-left'}},
+      legend: true,
       sort: false,
       defaultGroup: 'doodle',
       graphHeight: '1500px',
