modularized graph2d draw styles, added point style.

--- a/examples/graph2d/07_scrollingAndSorting.html
+++ b/examples/graph2d/07_scrollingAndSorting.html
@@ -61,6 +61,7 @@
   var options = {
       legend: true,
       sort: false,
+      style:'points',
       defaultGroup: 'doodle',
       graphHeight: '1500px',
       height: '500px',
