--- a/examples/graph2d/12_customRange.html
+++ b/examples/graph2d/12_customRange.html
@@ -18,6 +18,7 @@
     You can define a custom range for the Y axis. Since there are two Y axis, you can define both of them. You can also
     only define the min or max values. Since one of the Y axis is slaved to the other one (the right one is slaved to the left one),
     you cannot absolutely define the range of the slaved axis because it has to use the same lines. The values you supply are used as guidelines however.
+    If the zero-lines have to be aligned, you can use the option alignZeros. It is enabled by default.
 
 <pre class="prettyprint lang-js">
 var options = {
@@ -86,6 +87,7 @@ var options = {
         orientation:'top',
         start: '2014-06-10',
         end: '2014-06-18'
+
     };
     var graph2d = new vis.Graph2d(container, items, groups, options);
 
