Moving Timeline working with hammer2 (stop event propagation still an issue)

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -19,6 +19,12 @@
     #visualization .itemset {
       /*background: rgba(255, 255, 0, 0.5);*/
     }
+
+    .vis.timeline .item.range .drag-left,
+    .vis.timeline .item.range .drag-right {
+      width: 40px;
+      background: rgba(255,255,255,0.5);
+    }
   </style>
 
 </head>
