--- a/test/timeline.html
+++ b/test/timeline.html
@@ -94,6 +94,16 @@
     //height: 200,
     showCurrentTime: true,
     showCustomTime: true,
+    format: {
+      minorLabels: {
+        'weekday':    'dddd D',
+        'month': 'MMMM'
+      },
+      majorLabels: {
+        'minute':     'dddd D MMMM',
+        'hour':       'dddd D MMMM'
+      }
+    },
     //clickToUse: true,
     //min: moment('2013-01-01'),
     //max: moment('2013-12-31'),
