--- a/examples/graph2d/01_basic.html
+++ b/examples/graph2d/01_basic.html
@@ -47,7 +47,7 @@
     end: '2014-06-18'
   };
   var graph2d = new vis.Graph2d(container, dataset, options);
-
+  graph2d.fit();
 </script>
 </body>
 </html>
