Hammer2 mostly working in the Timeline

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -61,6 +61,7 @@
 <br>
 
 <div id="visualization"></div>
+<div style="height: 1000px;"></div><!-- for testing vertical scroll on touch devices-->
 
 <script>
   console.time('create dataset');
