--- a/test/timeline.html
+++ b/test/timeline.html
@@ -19,6 +19,10 @@
     #visualization .itemset {
       /*background: rgba(255, 255, 0, 0.5);*/
     }
+
+    #visualization .grid.vertical.odd {
+      background: #f5f5f5;
+    }
   </style>
 
 </head>
@@ -103,12 +107,12 @@
         'minute':     'dddd D MMMM',
         'hour':       'dddd D MMMM'
       }
-    },
+    }
     //clickToUse: true,
     //min: moment('2013-01-01'),
     //max: moment('2013-12-31'),
     //zoomMin: 1000 * 60 * 60 * 24,            // 1 day
-    zoomMax: 1000 * 60 * 60 * 24 * 30 * 6     // 6 months
+    //zoomMax: 1000 * 60 * 60 * 24 * 30 * 6     // 6 months
   };
 
   console.timeEnd('create dataset');
