Added docs and example on background grid styling and some minor tweaks

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -23,6 +23,16 @@
     #visualization .grid.vertical.odd {
       background: #f5f5f5;
     }
+
+    #visualization .grid.vertical.saturday,
+    #visualization .grid.vertical.sunday {
+      background: gray;
+    }
+
+    #visualization .text.saturday,
+    #visualization .text.sunday {
+      color: white;
+    }
   </style>
 
 </head>
