Fixed #590: implemented options to set a fixed scale

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -118,6 +118,10 @@
         'hour':       'dddd D MMMM'
       }
     }
+//    timeAxis: {
+//      scale: 'hour',
+//      step: 2
+//    }
     //clickToUse: true,
     //min: moment('2013-01-01'),
     //max: moment('2013-12-31'),
