minor tweak to example

--- a/examples/graph2d/19_labels.html
+++ b/examples/graph2d/19_labels.html
@@ -35,8 +35,8 @@
 
   var container = document.getElementById('visualization');
   var label1 = {
-    content: "Test",
-    xOffset: 100,
+    content: "offset label",
+    xOffset: 20,
     yOffset: 20
   }
 
