fantastic clustering in network woohoo, added point labels for bargraphs in graph2d

--- a/examples/graph2d/19_labels.html
+++ b/examples/graph2d/19_labels.html
@@ -57,6 +57,7 @@
   var options = {
     start: '2014-06-10',
     end: '2014-06-18',
+      style:'bar'
   };
   var graph2d = new vis.Graph2d(container, dataset, options);
 </script>
