Fixed #665, fixed #149: Implemented orientation option `'both'`, displaying a time axis both on top and bottom.

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -102,6 +102,7 @@
   var options = {
     editable: true,
     //orientation: 'top',
+    orientation: 'both',
     start: now.clone().add(-7, 'days'),
     end: now.clone().add(7, 'days'),
     //maxHeight: 200,
