The event handlers `onMove` and `onMoving` are now invoked with all item properties as argument, and can be used to update all properties (like content, className, etc) and add new properties as well

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -41,8 +41,9 @@
 <div>
   <label for="orientation">Orientation</label>
   <select id="orientation">
+    <option value="both" selected>both</option>
+    <option value="bottom">bottom</option>
     <option value="top">top</option>
-    <option value="bottom" selected>bottom</option>
   </select>
 </div>
 <script>
