Fixed the touch and release events being fired twice each time. Fixed a bug with dragging in the InteractionHandler

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -151,6 +151,14 @@
     console.log('select', selection);
   });
 
+//  timeline.on('touch', function (event) {
+//    console.log('touch', event, Object.keys(event));
+//  });
+//
+//  timeline.on('release', function (event) {
+//    console.log('release', event, Object.keys(event));
+//  });
+
   /*
    timeline.on('rangechange', function (range) {
    console.log('rangechange', range);
