--- a/test/timeline.html
+++ b/test/timeline.html
@@ -20,23 +20,23 @@
       /*background: rgba(255, 255, 0, 0.5);*/
     }
 
-    .vis.timeline .item.range .drag-left,
-    .vis.timeline .item.range .drag-right {
-      width: 40px;
+    .vis-timeline .vis-item.vis-range .vis-drag-left,
+    .vis-timeline .vis-item.vis-range .vis-drag-right {
+      /*width: 40px;*/
       background: rgba(255,255,255,0.5);
     }
 
-    #visualization .grid.vertical.odd {
+    #visualization .vis-grid.vis-vertical.odd {
       background: #f5f5f5;
     }
 
-    #visualization .grid.vertical.saturday,
-    #visualization .grid.vertical.sunday {
+    #visualization .vis-grid.vis-vertical.saturday,
+    #visualization .vis-grid.vis-vertical.sunday {
       background: gray;
     }
 
-    #visualization .text.saturday,
-    #visualization .text.sunday {
+    #visualization .vis-text.saturday,
+    #visualization .vis-text.sunday {
       color: white;
     }
   </style>
@@ -104,6 +104,18 @@
       _id: 4, content: 'item 4 foo bar foo bar foo bar foo bar foo bar',
       start: now.clone().add(0, 'days').toDate(),
       end: now.clone().add(7, 'days').toDate(),
+      title: 'hello title!'
+    },
+    {
+      _id: 4.1, content: 'item 4.1 test overflow foo bar foo bar foo bar foo bar foo bar',
+      start: now.clone().add(0, 'days').toDate(),
+      end: now.clone().add(1, 'days').toDate(),
+      title: 'hello title!'
+    },
+    {
+      _id: 4.2, content: 'item 4.2 test overflow foo bar foo bar foo bar foo bar foo bar',
+      start: now.clone().add(1, 'days').toDate(),
+      end: now.clone().add(1, 'days').add(1, 'minutes').toDate(),
       title: 'hello title!'
     },
     {_id: 5, content: 'item 5', start: now.clone().add(9, 'days').toDate(), type:'point', title: 'hello title!'},
