Fixed delete button not being visible

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -108,13 +108,13 @@
       title: 'hello title!'
     },
     {
-      _id: 4.1, content: 'item 4.1 test overflow foo bar foo bar foo bar foo bar foo bar',
+      _id: 4.1, content: 'item 4.1 test overflow foo bar foo bar foo bar',
       start: now.clone().add(0, 'days').toDate(),
       end: now.clone().add(1, 'days').toDate(),
       title: 'hello title!'
     },
     {
-      _id: 4.2, content: 'item 4.2 test overflow foo bar foo bar foo bar foo bar foo bar',
+      _id: 4.2, content: 'item 4.2 test overflow foo bar foo bar foo bar',
       start: now.clone().add(1, 'days').toDate(),
       end: now.clone().add(1, 'days').add(1, 'minutes').toDate(),
       title: 'hello title!'
