unified options with timeline, updated docs and configurator

--- a/examples/graph2d/10_barsSideBySide.html
+++ b/examples/graph2d/10_barsSideBySide.html
@@ -49,7 +49,8 @@
     var dataset = new vis.DataSet(items);
     var options = {
         style:'bar',
-        barChart: {width:50, align:'center'}, // align: left, center, right
+        stack:false,
+        barChart: {width:50, align:'center', sideBySide:false}, // align: left, center, right
         drawPoints: false,
         dataAxis: {
             icons:true
