--- a/examples/graph3d/03_filter_data.html
+++ b/examples/graph3d/03_filter_data.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!doctype html>
 <html>
 <head>
   <title>Graph 3D demo</title>
@@ -14,22 +14,24 @@
     var graph = null;
 
     function custom(x, y) {
-      return (Math.sin(x/50) * Math.cos(y/50) * 50 + 50);
+      return Math.sin(x/50) * Math.cos(y/50) * 50 + 50;
     }
 
     // Called when the Visualization API is loaded.
     function drawVisualization() {
       // Create and populate a data table.
-      data = new vis.DataSet();
+      data = [];
       // create some nice looking data with sin/cos
-      var counter = 0;
       var steps = 50;  // number of datapoints will be steps*steps
       var axisMax = 314;
       var axisStep = axisMax / steps;
       for (var x = 0; x < axisMax; x+=axisStep) {
         for (var y = 0; y < axisMax; y+=axisStep) {
           var value = custom(x,y);
-          data.add({id:counter++,x:x,y:y,z:value,style:value});
+          var valueRange = (value > 67) ? '67-100' :
+              (value < 33) ? '0-33' :
+                  '33-67';
+          data.push({x:x,y:y,z:value,filter:valueRange,style:value});
         }
       }
 
@@ -38,21 +40,23 @@
         width:  '600px',
         height: '600px',
         style: 'surface',
-        showPerspective: true,
+        showPerspective: false,
         showGrid: true,
         showShadow: false,
         keepAspectRatio: true,
-        verticalRatio: 0.5
+        verticalRatio: 0.5,
+        filterLabel: 'values'
       };
 
-      // Instantiate our graph object.
+      // Create our graph
       var container = document.getElementById('mygraph');
       graph = new vis.Graph3d(container, data, options);
     }
   </script>
-<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-61231638-1', 'auto');ga('send', 'pageview');</script></head>
+  <script src="../googleAnalytics.js"></script>
+</head>
 
-<body onload="drawVisualization();">
+<body onload="drawVisualization()">
 <div id="mygraph"></div>
 
 <div id="info"></div>
