Integrated an option configurator

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -142,6 +142,8 @@
 
   var container = document.getElementById('visualization');
   var options = {
+    configure: true,
+    multiselect: true,
     editable: true,
     //orientation: 'top',
     orientation: 'both',
