--- a/test/timeline_groups.html
+++ b/test/timeline_groups.html
@@ -90,6 +90,7 @@
   var container = document.getElementById('visualization');
   var options = {
     //orientation: 'top',
+    multiselect: true,
     editable: {
       add: true,
       remove: true,
